JSONValidator/jsonValidator.output
Grammar

    0 $accept: json $end

    1 $@1: %empty

    2 json: $@1 pair_declarations object

    3 pair_declarations: %empty
    4                  | pair_decl pair_declarations

    5 pair_decl: '(' T_string T_type ')'
    6          | '(' T_string T_type T_number_int ')'

    7 object: '{' '}'
    8       | '{' members '}'

    9 members: pair
   10        | pair ',' members
   11        | error ',' members

   12 pair: T_string ':' value

   13 array: '[' ']'
   14      | '[' elements ']'

   15 elements: value
   16         | value ',' elements

   17 value: T_string
   18      | T_number_int
   19      | T_number_float
   20      | object
   21      | array
   22      | T_true
   23      | T_false
   24      | T_null


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 5 6
    ')' (41) 5 6
    ',' (44) 10 11 16
    ':' (58) 12
    '[' (91) 13 14
    ']' (93) 13 14
    '{' (123) 7 8
    '}' (125) 7 8
    error (256) 11
    T_number_int <num> (258) 6 18
    T_number_float <numf> (259) 19
    T_string <str> (260) 5 6 12 17
    T_true (261) 22
    T_false (262) 23
    T_null (263) 24
    T_type <entity> (264) 5 6


Nonterminals, with rules where they appear

    $accept (18)
        on left: 0
    json (19)
        on left: 2
        on right: 0
    $@1 (20)
        on left: 1
        on right: 2
    pair_declarations (21)
        on left: 3 4
        on right: 2 4
    pair_decl (22)
        on left: 5 6
        on right: 4
    object <entity> (23)
        on left: 7 8
        on right: 2 20
    members (24)
        on left: 9 10 11
        on right: 8 10 11
    pair (25)
        on left: 12
        on right: 9 10
    array <entity> (26)
        on left: 13 14
        on right: 21
    elements <entity> (27)
        on left: 15 16
        on right: 14 16
    value <entity> (28)
        on left: 17 18 19 20 21 22 23 24
        on right: 12 15 16


State 0

    0 $accept: . json $end

    $default  reduce using rule 1 ($@1)

    json  go to state 1
    $@1   go to state 2


State 1

    0 $accept: json . $end

    $end  shift, and go to state 3


State 2

    2 json: $@1 . pair_declarations object

    '('  shift, and go to state 4

    $default  reduce using rule 3 (pair_declarations)

    pair_declarations  go to state 5
    pair_decl          go to state 6


State 3

    0 $accept: json $end .

    $default  accept


State 4

    5 pair_decl: '(' . T_string T_type ')'
    6          | '(' . T_string T_type T_number_int ')'

    T_string  shift, and go to state 7


State 5

    2 json: $@1 pair_declarations . object

    '{'  shift, and go to state 8

    object  go to state 9


State 6

    4 pair_declarations: pair_decl . pair_declarations

    '('  shift, and go to state 4

    $default  reduce using rule 3 (pair_declarations)

    pair_declarations  go to state 10
    pair_decl          go to state 6


State 7

    5 pair_decl: '(' T_string . T_type ')'
    6          | '(' T_string . T_type T_number_int ')'

    T_type  shift, and go to state 11


State 8

    7 object: '{' . '}'
    8       | '{' . members '}'

    error     shift, and go to state 12
    T_string  shift, and go to state 13
    '}'       shift, and go to state 14

    members  go to state 15
    pair     go to state 16


State 9

    2 json: $@1 pair_declarations object .

    $default  reduce using rule 2 (json)


State 10

    4 pair_declarations: pair_decl pair_declarations .

    $default  reduce using rule 4 (pair_declarations)


State 11

    5 pair_decl: '(' T_string T_type . ')'
    6          | '(' T_string T_type . T_number_int ')'

    T_number_int  shift, and go to state 17
    ')'           shift, and go to state 18


State 12

   11 members: error . ',' members

    ','  shift, and go to state 19


State 13

   12 pair: T_string . ':' value

    ':'  shift, and go to state 20


State 14

    7 object: '{' '}' .

    $default  reduce using rule 7 (object)


State 15

    8 object: '{' members . '}'

    '}'  shift, and go to state 21


State 16

    9 members: pair .
   10        | pair . ',' members

    ','  shift, and go to state 22

    $default  reduce using rule 9 (members)


State 17

    6 pair_decl: '(' T_string T_type T_number_int . ')'

    ')'  shift, and go to state 23


State 18

    5 pair_decl: '(' T_string T_type ')' .

    $default  reduce using rule 5 (pair_decl)


State 19

   11 members: error ',' . members

    error     shift, and go to state 12
    T_string  shift, and go to state 13

    members  go to state 24
    pair     go to state 16


State 20

   12 pair: T_string ':' . value

    T_number_int    shift, and go to state 25
    T_number_float  shift, and go to state 26
    T_string        shift, and go to state 27
    T_true          shift, and go to state 28
    T_false         shift, and go to state 29
    T_null          shift, and go to state 30
    '{'             shift, and go to state 8
    '['             shift, and go to state 31

    object  go to state 32
    array   go to state 33
    value   go to state 34


State 21

    8 object: '{' members '}' .

    $default  reduce using rule 8 (object)


State 22

   10 members: pair ',' . members

    error     shift, and go to state 12
    T_string  shift, and go to state 13

    members  go to state 35
    pair     go to state 16


State 23

    6 pair_decl: '(' T_string T_type T_number_int ')' .

    $default  reduce using rule 6 (pair_decl)


State 24

   11 members: error ',' members .

    $default  reduce using rule 11 (members)


State 25

   18 value: T_number_int .

    $default  reduce using rule 18 (value)


State 26

   19 value: T_number_float .

    $default  reduce using rule 19 (value)


State 27

   17 value: T_string .

    $default  reduce using rule 17 (value)


State 28

   22 value: T_true .

    $default  reduce using rule 22 (value)


State 29

   23 value: T_false .

    $default  reduce using rule 23 (value)


State 30

   24 value: T_null .

    $default  reduce using rule 24 (value)


State 31

   13 array: '[' . ']'
   14      | '[' . elements ']'

    T_number_int    shift, and go to state 25
    T_number_float  shift, and go to state 26
    T_string        shift, and go to state 27
    T_true          shift, and go to state 28
    T_false         shift, and go to state 29
    T_null          shift, and go to state 30
    '{'             shift, and go to state 8
    '['             shift, and go to state 31
    ']'             shift, and go to state 36

    object    go to state 32
    array     go to state 33
    elements  go to state 37
    value     go to state 38


State 32

   20 value: object .

    $default  reduce using rule 20 (value)


State 33

   21 value: array .

    $default  reduce using rule 21 (value)


State 34

   12 pair: T_string ':' value .

    $default  reduce using rule 12 (pair)


State 35

   10 members: pair ',' members .

    $default  reduce using rule 10 (members)


State 36

   13 array: '[' ']' .

    $default  reduce using rule 13 (array)


State 37

   14 array: '[' elements . ']'

    ']'  shift, and go to state 39


State 38

   15 elements: value .
   16         | value . ',' elements

    ','  shift, and go to state 40

    $default  reduce using rule 15 (elements)


State 39

   14 array: '[' elements ']' .

    $default  reduce using rule 14 (array)


State 40

   16 elements: value ',' . elements

    T_number_int    shift, and go to state 25
    T_number_float  shift, and go to state 26
    T_string        shift, and go to state 27
    T_true          shift, and go to state 28
    T_false         shift, and go to state 29
    T_null          shift, and go to state 30
    '{'             shift, and go to state 8
    '['             shift, and go to state 31

    object    go to state 32
    array     go to state 33
    elements  go to state 41
    value     go to state 38


State 41

   16 elements: value ',' elements .

    $default  reduce using rule 16 (elements)
